--- a/index.html
+++ b/index.html
@@ -2,14 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Cakes - Dolcidea</title>
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet" />
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dolcidea</title>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
-    .navbar {
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    html, body {
+      height: 100%;
+      font-family: 'Quicksand', sans-serif;
+      background-color: #f5f5f5;
+      color: #2f2f2f;
+      scroll-behavior: smooth;
+    }
+
+    /* Navbar */
+    nav {
       position: fixed;
       top: 0;
       width: 100%;
@@ -17,19 +29,17 @@
       display: flex;
       justify-content: center;
       padding: 1rem 2rem;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
       z-index: 1000;
     }
 
-    .navbar ul {
+    nav ul {
       display: flex;
       list-style: none;
       gap: 2rem;
-      padding: 0;
-      margin: 0;
     }
 
-    .navbar ul li a {
+    nav ul li a {
       text-decoration: none;
       color: #f5f5f5;
       font-weight: 600;
@@ -37,97 +47,88 @@
       transition: color 0.3s ease;
     }
 
-    .navbar ul li a:hover {
-      color: #d4af37;
+    nav ul li a:hover {
+      color: #d4af37; /* Elegant gold */
     }
 
-    body {
-      padding-top: 80px; /* To prevent navbar from overlapping content */
-    }
-
-    body {
-      font-family: 'Quicksand', sans-serif;
-      background-color: #f5f5f5;
-      margin: 0;
-      padding: 2rem;
-    }
-
-    /* New h1 styling with gold outline and fancy font */
-    h1 {
-      font-family: 'Great Vibes', cursive;
-      font-size: 4rem;
-      color: #2f2f2f;
+    /* Hero Section */
+    .hero {
+      position: relative;
+      height: 100vh;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-align: center;
-      margin-bottom: 2rem;
+    }
+
+    .video-background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
+      z-index: -2;
+    }
+
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.35); /* dark gray transparent overlay */
+      z-index: -1;
+    }
+
+    .hero-title {
+      font-family: 'Great Vibes', cursive;
+      font-size: 7rem;
+      color: #ffffff;
       text-shadow:
         -1px -1px 0 #d4af37,
          1px -1px 0 #d4af37,
         -1px  1px 0 #d4af37,
          1px  1px 0 #d4af37;
+      z-index: 1;
       user-select: none;
     }
 
-    .menu-section {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
-      justify-content: center;
-    }
-    .menu-item {
-      display: flex;
-      background: white;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      max-width: 800px;
-      border-radius: 12px;
-      overflow: hidden;
-    }
-    .menu-item:nth-child(even) {
-      flex-direction: row-reverse;
-    }
-    .menu-img {
-      width: 50%;
-      object-fit: cover;
-    }
-    .menu-desc {
-      padding: 1.5rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      width: 50%;
-    }
-    h2 {
-      margin-bottom: 0.5rem;
+    @media (max-width: 768px) {
+      .hero-title {
+        font-size: 4rem;
+      }
+
+      nav ul {
+        flex-direction: column;
+        gap: 1rem;
+      }
     }
   </style>
 </head>
 <body>
-  <nav class="navbar">
+
+  <!-- Navigation -->
+  <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="cakes.html">Cakes</a></li>
-      <li><a href="icecreams.html">Ice Creams</a></li>
-      <li><a href="reservations.html">Reservations</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="about.html">About Us</a></li>
+      <li><a href="#cakes">Cakes</a></li>
+      <li><a href="#icecreams">Ice Creams</a></li>
+      <li><a href="#reservations">Reservations</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#about">About Us</a></li>
     </ul>
   </nav>
-  <h1>Cakes Menu</h1>
-  <section class="menu-section">
-    <div class="menu-item">
-      <img class="menu-img" src="Strawberry_Cake.jpg" alt="Cake 1" />
-      <div class="menu-desc">
-        <h2>Elegant Strawberry Cake</h2>
-        <p>Fresh strawberries, fluffy sponge, and silky cream layers. Perfect for every celebration.</p>
-      </div>
-    </div>
-    <div class="menu-item">
-      <img class="menu-img" src="Chocolate_Cake.jpg" alt="Cake 2" />
-      <div class="menu-desc">
-        <h2>Chocolate Fantasy</h2>
-        <p>Rich dark chocolate layers with a light hazelnut cream filling. A delight for chocoholics.</p>
-      </div>
-    </div>
-    <!-- Add more items as needed -->
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <video class="video-background" autoplay muted loop playsinline>
+      <source src="icecream-showcase.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+    <div class="overlay"></div>
+    <h1 class="hero-title">Dolcidea</h1>
   </section>
+
 </body>
-</html>
+</html> 
