--- a/index.html
+++ b/index.html
@@ -2,25 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dolcidea</title>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Dolcidea - Home</title>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet" />
   <style>
+    /* Your CSS here - same as before */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
-
     html, body {
       height: 100%;
       font-family: 'Quicksand', sans-serif;
       background-color: #f5f5f5;
       color: #2f2f2f;
-      scroll-behavior: smooth;
     }
-
-    /* Navbar */
     nav {
       position: fixed;
       top: 0;
@@ -32,13 +29,11 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
       z-index: 1000;
     }
-
     nav ul {
       display: flex;
       list-style: none;
       gap: 2rem;
     }
-
     nav ul li a {
       text-decoration: none;
       color: #f5f5f5;
@@ -46,22 +41,21 @@
       font-size: 1.1rem;
       transition: color 0.3s ease;
     }
-
     nav ul li a:hover {
-      color: #d4af37; /* Elegant gold */
+      color: #d4af37;
     }
-
-    /* Hero Section */
+    body {
+      padding-top: 70px;
+    }
     .hero {
-      position: relative;
       height: 100vh;
-      overflow: hidden;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
+      position: relative;
+      overflow: hidden;
     }
-
     .video-background {
       position: fixed;
       top: 0;
@@ -71,21 +65,19 @@
       object-fit: cover;
       z-index: -2;
     }
-
     .overlay {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.35); /* dark gray transparent overlay */
+      background: rgba(0, 0, 0, 0.35);
       z-index: -1;
     }
-
     .hero-title {
       font-family: 'Great Vibes', cursive;
       font-size: 7rem;
-      color: #ffffff;
+      color: #fff;
       text-shadow:
         -1px -1px 0 #d4af37,
          1px -1px 0 #d4af37,
@@ -94,37 +86,10 @@
       z-index: 1;
       user-select: none;
     }
-
-    /* Section styles */
-    section {
-      padding: 100px 20px 60px;
-      max-width: 900px;
-      margin: 0 auto;
-      scroll-margin-top: 80px; /* to offset fixed nav */
-    }
-
-    section h2 {
-      font-family: 'Great Vibes', cursive;
-      font-size: 3rem;
-      margin-bottom: 1rem;
-      color: #d4af37;
-      text-align: center;
-    }
-
-    section p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      text-align: center;
-      max-width: 700px;
-      margin: 0 auto 2rem auto;
-    }
-
-    /* Responsive */
     @media (max-width: 768px) {
       .hero-title {
         font-size: 4rem;
       }
-
       nav ul {
         flex-direction: column;
         gap: 1rem;
@@ -137,11 +102,11 @@
   <!-- Navigation -->
   <nav>
     <ul>
-      <li><a href="#cakes">Cakes</a></li>
-      <li><a href="#icecreams">Ice Creams</a></li>
-      <li><a href="#reservations">Reservations</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#about">About Us</a></li>
+      <li><a href="cakes.html">Cakes</a></li>
+      <li><a href="icecreams.html">Ice Creams</a></li>
+      <li><a href="reservations.html">Reservations</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="about.html">About Us</a></li>
     </ul>
   </nav>
 
@@ -153,41 +118,6 @@
     </video>
     <div class="overlay"></div>
     <h1 class="hero-title">Dolcidea</h1>
-  </section>
-
-  <!-- Cakes Section -->
-  <section id="cakes">
-    <h2>Cakes</h2>
-    <p>Discover our delightful cakes made fresh daily using the finest ingredients.</p>
-    <!-- Add more cake details here -->
-  </section>
-
-  <!-- Ice Creams Section -->
-  <section id="icecreams">
-    <h2>Ice Creams</h2>
-    <p>Enjoy our authentic Italian gelato in a variety of classic and seasonal flavors.</p>
-    <!-- Add ice cream details here -->
-  </section>
-
-  <!-- Reservations Section -->
-  <section id="reservations">
-    <h2>Reservations</h2>
-    <p>Book your table in advance to enjoy a sweet escape at Dolcidea.</p>
-    <!-- Add reservation form or details -->
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Get in touch with us for inquiries, orders, or just to say hello.</p>
-    <!-- Add contact info or form -->
-  </section>
-
-  <!-- About Section -->
-  <section id="about">
-    <h2>About Us</h2>
-    <p>Dolcidea is your sweet escape into authentic Italian gelato, handcrafted daily with passion and tradition.</p>
-    <!-- Add more about details -->
   </section>
 
 </body>
