--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Dolcidea - Home</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet" />
   <style>
-    /* Your CSS here - same as before */
+    /* Reset and base */
     * {
       margin: 0;
       padding: 0;
@@ -18,6 +18,8 @@
       background-color: #f5f5f5;
       color: #2f2f2f;
     }
+
+    /* Navigation */
     nav {
       position: fixed;
       top: 0;
@@ -33,6 +35,7 @@
       display: flex;
       list-style: none;
       gap: 2rem;
+      /* Responsive nav flex direction set below */
     }
     nav ul li a {
       text-decoration: none;
@@ -44,9 +47,12 @@
     nav ul li a:hover {
       color: #d4af37;
     }
+
     body {
-      padding-top: 70px;
+      padding-top: 70px; /* space for fixed navbar */
     }
+
+    /* Hero Section */
     .hero {
       height: 100vh;
       display: flex;
@@ -64,6 +70,9 @@
       height: 100vh;
       object-fit: cover;
       z-index: -2;
+      max-width: 100%; /* responsive */
+      height: auto;    /* responsive */
+      display: block;
     }
     .overlay {
       position: fixed;
@@ -86,6 +95,8 @@
       z-index: 1;
       user-select: none;
     }
+
+    /* Responsive font sizes */
     @media (max-width: 768px) {
       .hero-title {
         font-size: 4rem;
@@ -93,6 +104,73 @@
       nav ul {
         flex-direction: column;
         gap: 1rem;
+      }
+    }
+
+    /* --- NEW RESPONSIVE FIXES BELOW --- */
+
+    /* Example container and items you might add later */
+    /* These can be adapted to your menu or content sections */
+    .menu-section {
+      display: flex;
+      gap: 2rem;
+      padding: 2rem;
+    }
+    .menu-item {
+      flex: 1;
+      max-width: 100%;
+      width: 100%;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: row;
+      gap: 1rem;
+      background: white;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    .menu-img {
+      max-width: 300px;
+      width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 8px;
+      object-fit: cover;
+    }
+    .menu-desc {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    /* Responsive adjustments for mobile */
+    @media (max-width: 600px) {
+      .menu-section {
+        flex-direction: column;
+        padding: 1rem;
+      }
+
+      .menu-item {
+        flex-direction: column !important;
+      }
+
+      .menu-img, .menu-desc {
+        width: 100% !important;
+      }
+
+      body {
+        padding: 1rem; /* smaller padding for mobile */
+      }
+
+      nav ul {
+        flex-direction: column;
+        gap: 1rem;
+      }
+
+      nav ul li a {
+        font-size: 1.2rem;
+        padding: 0.8rem 1rem;
       }
     }
   </style>
@@ -119,6 +197,26 @@
     <div class="overlay"></div>
     <h1 class="hero-title">Dolcidea</h1>
   </section>
+
+  <!-- Example menu section to show responsiveness -->
+  <!-- 
+  <section class="menu-section">
+    <article class="menu-item">
+      <img src="cake.jpg" alt="Cake" class="menu-img" />
+      <div class="menu-desc">
+        <h2>Delicious Cake</h2>
+        <p>Rich chocolate cake with fresh cream.</p>
+      </div>
+    </article>
+    <article class="menu-item">
+      <img src="icecream.jpg" alt="Ice Cream" class="menu-img" />
+      <div class="menu-desc">
+        <h2>Vanilla Ice Cream</h2>
+        <p>Creamy vanilla ice cream with nuts.</p>
+      </div>
+    </article>
+  </section>
+  -->
 
 </body>
 </html>
